--- a/TA_Add2DB/webapp/view/View1.view.xml
+++ b/TA_Add2DB/webapp/view/View1.view.xml
@@ -3,6 +3,7 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
+				
 					<Panel expandable="true" expanded="false" headerText="neuer Kunde hinzufügen" width="auto" class="sapUiResponsiveMargin">
 						<content>
 							<sap.ui.layout.form:Form xmlns:sap.ui.layout.form="sap.ui.layout.form" editable="true" id="__form1">
@@ -11,7 +12,7 @@
 										<sap.ui.layout.form:formElements>
 											<sap.ui.layout.form:FormElement label="ID" id="elementID">
 												<sap.ui.layout.form:fields>
-													<Input width="50%" id="inputID"/>
+													<Input  width="50%" id="inputID"/>
 												</sap.ui.layout.form:fields>
 											</sap.ui.layout.form:FormElement>
 											<sap.ui.layout.form:FormElement label="Name" id="elementName">
@@ -90,6 +91,94 @@
 							</items>
 						</Table>
 					</Panel>
+				
+				
+				
+					<Panel expandable="true" expanded="false" headerText="neues Paket hinzufügen" width="auto" class="sapUiResponsiveMargin" id="elementKunde">
+						<content >
+							<sap.ui.layout.form:Form xmlns:sap.ui.layout.form="sap.ui.layout.form" editable="true" id="Paketform1">
+								<sap.ui.layout.form:formContainers>
+									<sap.ui.layout.form:FormContainer id="Paketcontainer1">
+										<sap.ui.layout.form:formElements>
+											<sap.ui.layout.form:FormElement label="ID" id="PaketelementID">
+												<sap.ui.layout.form:fields>
+													<Input width="50%" id="PaketinputID"/>
+												</sap.ui.layout.form:fields>
+											</sap.ui.layout.form:FormElement>
+											
+											<sap.ui.layout.form:FormElement label="Zustand" id="elementStatus">
+												<sap.ui.layout.form:fields>
+													<Input width="50%" id="inputStatus"/>
+												</sap.ui.layout.form:fields>
+											</sap.ui.layout.form:FormElement>
+											
+											<sap.ui.layout.form:FormElement label="Lager" id="elementLager">
+												<sap.ui.layout.form:fields>
+													<Input width="50%" id="inputLager"/>
+												</sap.ui.layout.form:fields>
+											</sap.ui.layout.form:FormElement>
+											
+											<sap.ui.layout.form:FormElement label="Notizen" id="elementNotizen">
+												<sap.ui.layout.form:fields>
+													<Input width="50%" id="inputNotizen"/>
+												</sap.ui.layout.form:fields>
+											</sap.ui.layout.form:FormElement>
+											
+											<sap.ui.layout.form:FormElement label="Kunden ID" >
+												<sap.ui.layout.form:fields  >
+												<Input width="50%" id="inputKundenId"/>
+										
+												</sap.ui.layout.form:fields>
+											</sap.ui.layout.form:FormElement>
+											
+										
+											
+										</sap.ui.layout.form:formElements>
+										
+									</sap.ui.layout.form:FormContainer>
+								</sap.ui.layout.form:formContainers>
+								<sap.ui.layout.form:layout>
+									<sap.ui.layout.form:ResponsiveGridLayout id="Paketlayout1"/>
+								</sap.ui.layout.form:layout>
+							</sap.ui.layout.form:Form>
+						</content>
+						<Toolbar height="3rem">
+						
+							<Button icon="sap-icon://add" text="hinzufügen" type="Emphasized" press="onAddPacket"/>
+						</Toolbar>
+						<Table id="AddPaket" items="{/Packets}" >
+						<columns>
+									<Column width="12em">
+										<Text text="ID"/>
+									</Column>
+									<Column width="12em">
+										<Text text="Zustand"/>
+									</Column>
+									<Column minScreenWidth="Tablet" demandPopin="true">
+										<Text text="Lager"/>
+									</Column>
+									<Column minScreenWidth="Tablet" demandPopin="true">
+										<Text text="Notizen"/>
+									</Column>
+									<Column minScreenWidth="Tablet" demandPopin="true">
+										<Text text="Kundennummer"/>
+									</Column>
+								</columns>
+								<items>
+									<ColumnListItem>
+										<cells>
+											<ObjectIdentifier text="{ID}" class="sapMTableContentMargin"/>
+											<Text text="{status}"/>
+											<Text text="{stock}"/>
+											<Text text="{note}"/>
+											<Text text="{user_ID}"/>
+										</cells>
+									</ColumnListItem>
+								</items>
+						</Table>
+					</Panel>
+				
+				
 					<Panel expandable="true" expanded="false" headerText="Kunden" width="auto" class="sapUiResponsiveMargin">
 						<content>
 							<Table id="kundeTabelle" items="{/Users}">
@@ -130,6 +219,8 @@
 							</Table>
 						</content>
 					</Panel>
+					
+					
 					<Panel expandable="true" expanded="false" headerText="Pakete" width="auto" class="sapUiResponsiveMargin">
 						<content>
 							<Table id="Pakete" items="{/Packets}">
