--- a/TA_Add2DB/webapp/view/View1.view.xml
+++ b/TA_Add2DB/webapp/view/View1.view.xml
@@ -3,7 +3,8 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<Panel expandable="true" expanded="false" headerText="neuer Kunde hinzufügen" width="auto" class="sapUiResponsiveMargin">
+					<Panel expandable="true" expanded="false" headerText="neuen Kunden hinzufügen" width="auto" class="sapUiResponsiveMargin">
+
 						<content>
 							<sap.ui.layout.form:Form xmlns:sap.ui.layout.form="sap.ui.layout.form" editable="true" id="__form1">
 								<sap.ui.layout.form:formContainers>
@@ -80,6 +81,7 @@
 								<ColumnListItem>
 									<cells>
 										<ObjectIdentifier text="{ID}" class="sapMTableContentMargin"/>
+									
 										<Text text="{name}"/>
 										<Text text="{vorname}"/>
 										<Text text="{postzahl}"/>
@@ -153,7 +155,7 @@
 							<items>
 								<ColumnListItem>
 									<cells>
-										<ObjectIdentifier text="{Barcode}" class="sapMTableContentMargin"/>
+										<ObjectIdentifier text="{ID}" class="sapMTableContentMargin"/>
 										<Text text="{status}"/>
 										<Text text="{stock}"/>
 										<Text text="{note}"/>
@@ -164,13 +166,20 @@
 						</Table>
 					</Panel>
 					<Panel expandable="true" expanded="false" headerText="Kunden" width="auto" class="sapUiResponsiveMargin">
+						<headerToolbar>
+<Toolbar height="3rem">
+<Title text="Kunden"/>
+<ToolbarSpacer/>
+<Button icon="sap-icon://sys-minus" text="Delete Row" type="Reject" press="ondeleteKunde"/>
+</Toolbar>
+</headerToolbar>
 						<content>
 							<Bar>
 								<contentLeft>
 									<SearchField search="handleSearchKunde" id="searchboxKunde"/>
 								</contentLeft>
 							</Bar>
-							<Table id="kundeTabelle" items="{/Users}">
+							<Table id="kundeTabelle" items="{/Users}" mode="MultiSelect" growing="true" growingThreshold="4" growingScrollToLoad="false">
 								<columns>
 									<Column width="12em">
 										<Text text="ID"/>
@@ -190,6 +199,11 @@
 									<Column minScreenWidth="Tablet" demandPopin="true">
 										<Text text="Telefonnummer "/>
 									</Column>
+									<Column minScreenWidth="Tablet" demandPopin="true">
+										  
+
+      
+									</Column>
 								</columns>
 								<items>
 									<ColumnListItem>
@@ -200,6 +214,7 @@
 											<Text text="{postzahl}"/>
 											<Text text="{adresse}"/>
 											<Text text="{teleNummer}"/>
+										
 										</cells>
 									</ColumnListItem>
 								</items>
@@ -207,13 +222,20 @@
 						</content>
 					</Panel>
 					<Panel expandable="true" expanded="false" headerText="Pakete" width="auto" class="sapUiResponsiveMargin">
+												<headerToolbar>
+<Toolbar height="3rem">
+<Title text="Pakete"/>
+<ToolbarSpacer/>
+<Button icon="sap-icon://sys-minus" text="Delete Row" type="Reject" press="ondeletePakets"/>
+</Toolbar>
+</headerToolbar>
 						<content>
 								<Bar>
 								<contentLeft>
 									<SearchField search="handleSearchPacktes" id="searchboxPacktes"/>
 								</contentLeft>
 							</Bar>
-							<Table id="Pakete" items="{/Packets}">
+							<Table id="Pakete" items="{/Packets}" mode="MultiSelect" growing="true" growingThreshold="4" growingScrollToLoad="false" >
 								<columns>
 									<Column width="12em">
 										<Text text="Paketnummer"/>
@@ -252,7 +274,7 @@
 							</contentLeft>
 						</Bar>
 						<content>
-							<List items="{/Users}" id="List">
+							<List items="{/Users}" id="List" growing="true" growingThreshold="4" growingScrollToLoad="false">
 								<StandardListItem type="Navigation" press="handleListItemPress" title="{name},{vorname}"/>
 							</List>
 						</content>
